--- a/_sources/guide/working_with_programs.ipynb
+++ b/_sources/guide/working_with_programs.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fb7041e2",
+   "id": "e9776d12",
    "metadata": {},
    "source": [
     "# Working with Programs\n",
@@ -12,7 +12,7 @@
     "We call them programs because that's what they are: executable data structures,  \n",
     "and that is what they are called in the genetic algorithm literature, to distinguish them from optimizing bits or strings. \n",
     "\n",
-    "The Brush Program class operates similarly to a (sklearn)[scikit-learn.org] estimator: it has `fit` and `predict` methods that are called in during training or inference, respectively. \n",
+    "The Brush Program class operates similarly to a [sklearn](scikit-learn.org) estimator: it has `fit` and `predict` methods that are called in during training or inference, respectively. \n",
     "\n",
     "\n",
     "## Types of Programs \n",
@@ -29,16 +29,18 @@
     "## Representation \n",
     "\n",
     "Internally, the programs are represented as syntax trees. \n",
-    "We use the (tree.hh tree class)[https://github.com/kpeeters/tree.hh] which gives trees an STL-like feel. \n",
+    "We use the [tree.hh tree class](https://github.com/kpeeters/tree.hh) which gives trees an STL-like feel. \n",
     "\n",
     "\n",
     "\n",
     "## Generation\n",
     "\n",
-    "We generate random programs using Sean Luke's [PTC2 algorithm]().  \n",
+    "We generate random programs using Sean Luke's PTC2 algorithm.  \n",
     "\n",
     "\n",
     "## Evaluation\n",
+    "\n",
+    "TODO\n",
     "\n",
     "\n"
    ]
@@ -218,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "b35bedac",
+   "id": "050565b5",
    "metadata": {},
    "outputs": [
     {
