Update wrapper to as before std::optional and added offspring size

--- a/src/brush/D_MAB_experiments.ipynb
+++ b/src/brush/D_MAB_experiments.ipynb
@@ -54,6 +54,7 @@
    "source": [
     "import numpy as np\n",
     "\n",
+    "# TODO: update this to work with optional mutation\n",
     "class D_MAB:\n",
     "    def __init__(self, num_bandits, delta=0.15, lmbda=0.25):\n",
     "        self.num_bandits = num_bandits\n",
