--- a/docs/guide/saving_loading_populations.ipynb
+++ b/docs/guide/saving_loading_populations.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,88 +40,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generation 1/10 [//////                                            ]\n",
-      "Train Loss (Med): 11.75939 (74.37032)\n",
-      "Val Loss (Med): 11.75939 (74.37032)\n",
-      "Median Size (Max): 3 (19)\n",
-      "Median complexity (Max): 9 (432)\n",
-      "Time (s): 0.12205\n",
-      "\n",
-      "Generation 2/10 [///////////                                       ]\n",
-      "Train Loss (Med): 11.58283 (17.94969)\n",
-      "Val Loss (Med): 11.58283 (17.94969)\n",
-      "Median Size (Max): 3 (19)\n",
-      "Median complexity (Max): 9 (368)\n",
-      "Time (s): 0.27800\n",
-      "\n",
-      "Generation 3/10 [////////////////                                  ]\n",
-      "Train Loss (Med): 11.15674 (17.94969)\n",
-      "Val Loss (Med): 11.15674 (17.94969)\n",
-      "Median Size (Max): 3 (20)\n",
-      "Median complexity (Max): 10 (915)\n",
-      "Time (s): 0.41845\n",
-      "\n",
-      "Generation 4/10 [/////////////////////                             ]\n",
-      "Train Loss (Med): 10.62121 (17.94969)\n",
-      "Val Loss (Med): 10.62121 (17.94969)\n",
-      "Median Size (Max): 3 (20)\n",
-      "Median complexity (Max): 9 (381)\n",
-      "Time (s): 0.56585\n",
-      "\n",
-      "Generation 5/10 [//////////////////////////                        ]\n",
-      "Train Loss (Med): 10.51181 (17.94969)\n",
-      "Val Loss (Med): 10.51181 (17.94969)\n",
-      "Median Size (Max): 3 (20)\n",
-      "Median complexity (Max): 9 (412)\n",
-      "Time (s): 0.73561\n",
-      "\n",
-      "Generation 6/10 [///////////////////////////////                   ]\n",
-      "Train Loss (Med): 10.51181 (17.94969)\n",
-      "Val Loss (Med): 10.51181 (17.94969)\n",
-      "Median Size (Max): 3 (20)\n",
-      "Median complexity (Max): 9 (412)\n",
-      "Time (s): 0.89526\n",
-      "\n",
-      "Generation 7/10 [////////////////////////////////////              ]\n",
-      "Train Loss (Med): 10.51181 (17.94969)\n",
-      "Val Loss (Med): 10.51181 (17.94969)\n",
-      "Median Size (Max): 3 (20)\n",
-      "Median complexity (Max): 9 (412)\n",
-      "Time (s): 1.03213\n",
-      "\n",
-      "Generation 8/10 [/////////////////////////////////////////         ]\n",
-      "Train Loss (Med): 10.43982 (17.94969)\n",
-      "Val Loss (Med): 10.43982 (17.94969)\n",
-      "Median Size (Max): 3 (20)\n",
-      "Median complexity (Max): 9 (412)\n",
-      "Time (s): 1.19282\n",
-      "\n",
-      "Generation 9/10 [//////////////////////////////////////////////    ]\n",
-      "Train Loss (Med): 10.33524 (17.94969)\n",
-      "Val Loss (Med): 10.33524 (17.94969)\n",
-      "Median Size (Max): 3 (20)\n",
-      "Median complexity (Max): 9 (368)\n",
-      "Time (s): 1.33781\n",
-      "\n",
-      "Generation 10/10 [//////////////////////////////////////////////////]\n",
-      "Train Loss (Med): 10.33524 (17.94969)\n",
-      "Val Loss (Med): 10.33524 (17.94969)\n",
-      "Median Size (Max): 3 (20)\n",
-      "Median complexity (Max): 9 (368)\n",
-      "Time (s): 1.50192\n",
-      "\n",
-      "Saved population to file /tmp/tmpw7jkwa5m/population.json\n",
-      "score: 0.8856532915521027\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
     "import os, tempfile\n",
@@ -132,6 +53,7 @@
     "est = BrushRegressor(\n",
     "    functions=['SplitBest','Add','Mul','Sin','Cos','Exp','Logabs'],\n",
     "    max_gens=10,\n",
+    "    objectives=[\"error\", \"complexity\"],\n",
     "    save_population=pop_file,\n",
     "    verbosity=2\n",
     ")\n",
@@ -152,94 +74,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loaded population from /tmp/tmpw7jkwa5m/population.json of size = 200\n",
-      "Generation 1/10 [//////                                            ]\n",
-      "Train Loss (Med): 10.33524 (17.94969)\n",
-      "Val Loss (Med): 10.33524 (17.94969)\n",
-      "Median Size (Max): 3 (20)\n",
-      "Median complexity (Max): 9 (368)\n",
-      "Time (s): 0.16596\n",
-      "\n",
-      "Generation 2/10 [///////////                                       ]\n",
-      "Train Loss (Med): 10.33524 (17.94969)\n",
-      "Val Loss (Med): 10.33524 (17.94969)\n",
-      "Median Size (Max): 3 (18)\n",
-      "Median complexity (Max): 9 (240)\n",
-      "Time (s): 0.31669\n",
-      "\n",
-      "Generation 3/10 [////////////////                                  ]\n",
-      "Train Loss (Med): 10.26326 (17.94969)\n",
-      "Val Loss (Med): 10.26326 (17.94969)\n",
-      "Median Size (Max): 3 (20)\n",
-      "Median complexity (Max): 9 (368)\n",
-      "Time (s): 0.45045\n",
-      "\n",
-      "Generation 4/10 [/////////////////////                             ]\n",
-      "Train Loss (Med): 10.26326 (17.94969)\n",
-      "Val Loss (Med): 10.26326 (17.94969)\n",
-      "Median Size (Max): 3 (19)\n",
-      "Median complexity (Max): 9 (368)\n",
-      "Time (s): 0.63331\n",
-      "\n",
-      "Generation 5/10 [//////////////////////////                        ]\n",
-      "Train Loss (Med): 10.26326 (16.41696)\n",
-      "Val Loss (Med): 10.26326 (16.41696)\n",
-      "Median Size (Max): 5 (17)\n",
-      "Median complexity (Max): 33 (330)\n",
-      "Time (s): 0.78002\n",
-      "\n",
-      "Generation 6/10 [///////////////////////////////                   ]\n",
-      "Train Loss (Med): 9.70269 (17.94969)\n",
-      "Val Loss (Med): 9.70269 (17.94969)\n",
-      "Median Size (Max): 3 (19)\n",
-      "Median complexity (Max): 9 (330)\n",
-      "Time (s): 0.91656\n",
-      "\n",
-      "Generation 7/10 [////////////////////////////////////              ]\n",
-      "Train Loss (Med): 9.67577 (17.94969)\n",
-      "Val Loss (Med): 9.67577 (17.94969)\n",
-      "Median Size (Max): 3 (19)\n",
-      "Median complexity (Max): 9 (330)\n",
-      "Time (s): 1.10225\n",
-      "\n",
-      "Generation 8/10 [/////////////////////////////////////////         ]\n",
-      "Train Loss (Med): 9.67577 (16.41696)\n",
-      "Val Loss (Med): 9.67577 (16.41696)\n",
-      "Median Size (Max): 5 (19)\n",
-      "Median complexity (Max): 33 (330)\n",
-      "Time (s): 1.30773\n",
-      "\n",
-      "Generation 9/10 [//////////////////////////////////////////////    ]\n",
-      "Train Loss (Med): 9.67577 (16.41696)\n",
-      "Val Loss (Med): 9.67577 (16.41696)\n",
-      "Median Size (Max): 5 (19)\n",
-      "Median complexity (Max): 33 (330)\n",
-      "Time (s): 1.44840\n",
-      "\n",
-      "Generation 10/10 [//////////////////////////////////////////////////]\n",
-      "Train Loss (Med): 9.67577 (15.67545)\n",
-      "Val Loss (Med): 9.67577 (15.67545)\n",
-      "Median Size (Max): 6 (19)\n",
-      "Median complexity (Max): 36 (723)\n",
-      "Time (s): 1.65144\n",
-      "\n",
-      "score: 0.892949582824199\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "est = BrushRegressor(\n",
     "    functions=['SplitBest','Add','Mul','Sin','Cos','Exp','Logabs'],\n",
     "    load_population=pop_file,\n",
     "    max_gens=10,\n",
-    "    verbosity=2\n",
+    "    verbosity=1\n",
     ")\n",
     "\n",
     "est.fit(X,y)\n",
@@ -254,6 +97,81 @@
     "You can open the serialized file and change individuals' programs manually.\n",
     "\n",
     "This also allow us to have checkpoints in the execution."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Using population files with classification\n",
+    "\n",
+    "To give another example, we do a two-step fit in the cells below.\n",
+    "\n",
+    "First, we run the evolution and save the population to a file; then, we load it and keep evolving the individuals.\n",
+    "\n",
+    "What is different though is that the first run is optimizing `error` and `complexity`, and the second run is optimizing `average_precision_score` and `size`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pybrush import BrushClassifier\n",
+    "\n",
+    "# load data\n",
+    "df = pd.read_csv('../examples/datasets/d_analcatdata_aids.csv')\n",
+    "X = df.drop(columns='target')\n",
+    "y = df['target']\n",
+    "\n",
+    "pop_file = os.path.join(tempfile.mkdtemp(), 'population.json')\n",
+    "\n",
+    "est = BrushClassifier(\n",
+    "    functions=['SplitBest','Add','Mul','Sin','Cos','Exp','Logabs'],\n",
+    "    max_gens=10,\n",
+    "    objectives=[\"error\", \"complexity\"],\n",
+    "    scorer=\"log\",\n",
+    "    save_population=pop_file,\n",
+    "    verbosity=2\n",
+    ")\n",
+    "\n",
+    "est.fit(X,y)\n",
+    "print(est.best_estimator_.get_model())\n",
+    "\n",
+    "y_pred = est.predict(X)\n",
+    "print('score:', est.score(X,y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "est = BrushClassifier(\n",
+    "    functions=['SplitBest','Add','Mul','Sin','Cos','Exp','Logabs'],\n",
+    "    #load_population=pop_file,\n",
+    "    objectives=[\"error\", \"complexity\"],\n",
+    "    scorer=\"average_precision_score\",\n",
+    "    max_gens=1,\n",
+    "    verbosity=2\n",
+    ")\n",
+    "\n",
+    "est.fit(X,y)\n",
+    "print(est.best_estimator_.get_model())\n",
+    "\n",
+    "y_pred = est.predict(X)\n",
+    "print('score:', est.score(X,y))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "est.best_estimator_.get_model()"
    ]
   }
  ],
