--- a/docs/guide/saving_loading_populations.ipynb
+++ b/docs/guide/saving_loading_populations.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,9 +40,89 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 1/10 [//////                                            ]\n",
+      "Train Loss (Med): 14.24093 (60.79966)\n",
+      "Val Loss (Med): 14.24093 (60.79966)\n",
+      "Median Size (Max): 3 (18)\n",
+      "Median complexity (Max): 9 (351)\n",
+      "Time (s): 0.12213\n",
+      "\n",
+      "Generation 2/10 [///////////                                       ]\n",
+      "Train Loss (Med): 13.86337 (20.54475)\n",
+      "Val Loss (Med): 13.86337 (20.54475)\n",
+      "Median Size (Max): 3 (20)\n",
+      "Median complexity (Max): 9 (651)\n",
+      "Time (s): 0.20873\n",
+      "\n",
+      "Generation 3/10 [////////////////                                  ]\n",
+      "Train Loss (Med): 13.58168 (17.94969)\n",
+      "Val Loss (Med): 13.58168 (17.94969)\n",
+      "Median Size (Max): 3 (18)\n",
+      "Median complexity (Max): 9 (216)\n",
+      "Time (s): 0.30500\n",
+      "\n",
+      "Generation 4/10 [/////////////////////                             ]\n",
+      "Train Loss (Med): 13.58167 (17.94969)\n",
+      "Val Loss (Med): 13.58167 (17.94969)\n",
+      "Median Size (Max): 3 (18)\n",
+      "Median complexity (Max): 9 (478)\n",
+      "Time (s): 0.44846\n",
+      "\n",
+      "Generation 5/10 [//////////////////////////                        ]\n",
+      "Train Loss (Med): 13.58167 (17.94969)\n",
+      "Val Loss (Med): 13.58167 (17.94969)\n",
+      "Median Size (Max): 3 (18)\n",
+      "Median complexity (Max): 8 (297)\n",
+      "Time (s): 0.58464\n",
+      "\n",
+      "Generation 6/10 [///////////////////////////////                   ]\n",
+      "Train Loss (Med): 13.25836 (63.64049)\n",
+      "Val Loss (Med): 13.25836 (63.64049)\n",
+      "Median Size (Max): 3 (18)\n",
+      "Median complexity (Max): 7 (297)\n",
+      "Time (s): 0.71193\n",
+      "\n",
+      "Generation 7/10 [////////////////////////////////////              ]\n",
+      "Train Loss (Med): 10.63986 (63.64049)\n",
+      "Val Loss (Med): 10.63986 (63.64049)\n",
+      "Median Size (Max): 3 (18)\n",
+      "Median complexity (Max): 6 (567)\n",
+      "Time (s): 0.84199\n",
+      "\n",
+      "Generation 8/10 [/////////////////////////////////////////         ]\n",
+      "Train Loss (Med): 10.28156 (63.64049)\n",
+      "Val Loss (Med): 10.28156 (63.64049)\n",
+      "Median Size (Max): 3 (18)\n",
+      "Median complexity (Max): 6 (270)\n",
+      "Time (s): 0.96073\n",
+      "\n",
+      "Generation 9/10 [//////////////////////////////////////////////    ]\n",
+      "Train Loss (Med): 10.09177 (63.64049)\n",
+      "Val Loss (Med): 10.09177 (63.64049)\n",
+      "Median Size (Max): 3 (18)\n",
+      "Median complexity (Max): 6 (216)\n",
+      "Time (s): 1.06539\n",
+      "\n",
+      "Generation 10/10 [//////////////////////////////////////////////////]\n",
+      "Train Loss (Med): 10.09177 (63.64049)\n",
+      "Val Loss (Med): 10.09177 (63.64049)\n",
+      "Median Size (Max): 3 (20)\n",
+      "Median complexity (Max): 6 (510)\n",
+      "Time (s): 1.15215\n",
+      "\n",
+      "Saved population to file /tmp/tmp91lebnyr/population.json\n",
+      "saving final population as archive...\n",
+      "score: 0.8883469950530682\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "import os, tempfile\n",
@@ -74,9 +154,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loaded population from /tmp/tmp91lebnyr/population.json of size = 200\n",
+      "Completed 100% [====================]\n",
+      "saving final population as archive...\n",
+      "score: 0.8893989188100573\n"
+     ]
+    }
+   ],
    "source": [
     "est = BrushRegressor(\n",
     "    functions=['SplitBest','Add','Mul','Sin','Cos','Exp','Logabs'],\n",
@@ -114,9 +205,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 1/10 [//////                                            ]\n",
+      "Train Loss (Med): 0.54930 (0.69315)\n",
+      "Val Loss (Med): 0.54930 (0.69315)\n",
+      "Median Size (Max): 5 (10)\n",
+      "Median complexity (Max): 6 (270)\n",
+      "Time (s): 0.05091\n",
+      "\n",
+      "Generation 2/10 [///////////                                       ]\n",
+      "Train Loss (Med): 0.54848 (0.69315)\n",
+      "Val Loss (Med): 0.54848 (0.69315)\n",
+      "Median Size (Max): 5 (10)\n",
+      "Median complexity (Max): 6 (54)\n",
+      "Time (s): 0.08855\n",
+      "\n",
+      "Generation 3/10 [////////////////                                  ]\n",
+      "Train Loss (Med): 0.54847 (0.69315)\n",
+      "Val Loss (Med): 0.54847 (0.69315)\n",
+      "Median Size (Max): 5 (10)\n",
+      "Median complexity (Max): 6 (54)\n",
+      "Time (s): 0.12188\n",
+      "\n",
+      "Generation 4/10 [/////////////////////                             ]\n",
+      "Train Loss (Med): 0.54847 (0.69315)\n",
+      "Val Loss (Med): 0.54847 (0.69315)\n",
+      "Median Size (Max): 1 (10)\n",
+      "Median complexity (Max): 2 (52)\n",
+      "Time (s): 0.15164\n",
+      "\n",
+      "Generation 5/10 [//////////////////////////                        ]\n",
+      "Train Loss (Med): 0.54846 (0.69315)\n",
+      "Val Loss (Med): 0.54846 (0.69315)\n",
+      "Median Size (Max): 1 (9)\n",
+      "Median complexity (Max): 1 (52)\n",
+      "Time (s): 0.18853\n",
+      "\n",
+      "Generation 6/10 [///////////////////////////////                   ]\n",
+      "Train Loss (Med): 0.50911 (0.69315)\n",
+      "Val Loss (Med): 0.50911 (0.69315)\n",
+      "Median Size (Max): 1 (12)\n",
+      "Median complexity (Max): 1 (52)\n",
+      "Time (s): 0.23546\n",
+      "\n",
+      "Generation 7/10 [////////////////////////////////////              ]\n",
+      "Train Loss (Med): 0.50911 (0.69315)\n",
+      "Val Loss (Med): 0.50911 (0.69315)\n",
+      "Median Size (Max): 1 (12)\n",
+      "Median complexity (Max): 1 (44)\n",
+      "Time (s): 0.28747\n",
+      "\n",
+      "Generation 8/10 [/////////////////////////////////////////         ]\n",
+      "Train Loss (Med): 0.50911 (0.69315)\n",
+      "Val Loss (Med): 0.50911 (0.69315)\n",
+      "Median Size (Max): 1 (14)\n",
+      "Median complexity (Max): 1 (120)\n",
+      "Time (s): 0.34002\n",
+      "\n",
+      "Generation 9/10 [//////////////////////////////////////////////    ]\n",
+      "Train Loss (Med): 0.50911 (0.69315)\n",
+      "Val Loss (Med): 0.50911 (0.69315)\n",
+      "Median Size (Max): 1 (14)\n",
+      "Median complexity (Max): 1 (80)\n",
+      "Time (s): 0.39083\n",
+      "\n",
+      "Generation 10/10 [//////////////////////////////////////////////////]\n",
+      "Train Loss (Med): 0.50911 (0.69315)\n",
+      "Val Loss (Med): 0.50911 (0.69315)\n",
+      "Median Size (Max): 1 (12)\n",
+      "Median complexity (Max): 1 (44)\n",
+      "Time (s): 0.45610\n",
+      "\n",
+      "Saved population to file /tmp/tmpqcnwu35t/population.json\n",
+      "saving final population as archive...\n",
+      "If(AIDS>15890.50,Logistic(13.52),If(Total>1572255.50,0.22,0.52))\n",
+      "score: 0.7\n"
+     ]
+    }
+   ],
    "source": [
     "from pybrush import BrushClassifier\n",
     "\n",
@@ -145,9 +317,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Generation 1/1 [//////////////////////////////////////////////////]\n",
+      "Train Loss (Med): 0.46115 (0.31675)\n",
+      "Val Loss (Med): 0.46115 (0.31675)\n",
+      "Median Size (Max): 5 (9)\n",
+      "Median complexity (Max): 6 (120)\n",
+      "Time (s): 0.04622\n",
+      "\n",
+      "saving final population as archive...\n",
+      "Logistic(Sum(-1.2485952,Add(-1.25,0.08*AIDS)))\n",
+      "score: 0.54\n"
+     ]
+    }
+   ],
    "source": [
     "est = BrushClassifier(\n",
     "    functions=['SplitBest','Add','Mul','Sin','Cos','Exp','Logabs'],\n",
@@ -163,15 +352,6 @@
     "\n",
     "y_pred = est.predict(X)\n",
     "print('score:', est.score(X,y))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "est.best_estimator_.get_model()"
    ]
   }
  ],
